# freedom-video-player

./: .gitignore  README.md  flag_anim.webm  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: build-empty-state-icon.ps1  dev-env.ps1  fvp-debug.bat
src/: App.tsx  featureFlags.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: autosnip_wordlist.md  autosnip_wordlist_de.md  autosnip_wordlist_es.md  autosnip_wordlist_fr.md
src-tauri/capabilities/: default.json
src-tauri/src/: console_attach.rs  lib.rs  logging.rs  main.rs
src-tauri/src/autosnip/: mod.rs  srt.rs  wordlist.rs
src-tauri/src/commands/: autosnip.rs  diagnostics.rs  library.rs  mod.rs  peaks.rs  playback.rs  profile.rs  tmdb.rs  window.rs
src-tauri/src/fingerprint/: compute.rs  mod.rs  phash.rs  scoring.rs
src-tauri/src/peaks/: mod.rs
src-tauri/src/playback/: audio_filter.rs  audio_replace.rs  mod.rs
src-tauri/src/profile/: format.rs  io.rs  mod.rs  signing.rs
src-tauri/src/tmdb/: mod.rs
src/components/: AboutModal.tsx  AutoSnipModals.tsx  BeepShortenModal.tsx  BulkProgressBar.tsx  CheatsheetOverlay.tsx  ContextMenu.tsx  CropOverlay.tsx  ExportProfileModal.tsx  FamilyViewPinSection.tsx  FeatureRequestModal.tsx  FindInSubsBar.tsx  FullscreenTransitionIndicator.tsx  HotkeyRecorder.tsx  HotkeyTicker.tsx  ImdbLinkModal.tsx  LoadTimeoutModal.tsx  LoadingOverlay.tsx  MenuBar.tsx  MovieInfoModal.tsx  MovieInfoPanel.tsx  PeaksBuildingBadge.tsx  PlayerOverlays.tsx  ProfileChip.tsx  ProfilePickerModal.tsx  ProfileSwitcher.tsx  RateMovieModal.tsx  ReportErrorModal.tsx  ResumeOrStartOverModal.tsx  SafetyBanner.tsx  SearchAndFlagModal.tsx  SeekBar.tsx  SkipThatTray.tsx  SnipGroupsModal.tsx  StatusBar.tsx  TitleBar.tsx  TmdbAutoFillModal.tsx  Toast.tsx  TransportBar.tsx  TypedConfirmModal.tsx  UiErrorBoundary.tsx  (+3 more)
src/controller/: playerController.ts
src/hooks/: useAudioPeaks.ts  useAudioReplaceOverlay.ts  useAutosaveDraft.ts  useChromeAutoHide.ts  useDimensionsProbe.ts  useFileDropTarget.ts  useHotkeys.ts  useLibraryMetadataPrefill.ts  useLibraryWatchTracker.ts  useMpvEventBridge.ts  useProfileApplication.ts  useSavedStatusTracker.ts  useSettingsPersist.ts  useVideoAreaReporter.ts  useWindowStatePersist.ts
src/ipc/: autosnip.ts  diagnostics.ts  index.ts  library.ts  libraryHostClient.ts  peaks.ts  playback.ts  profile.ts  subtitles.ts  tmdb.ts  tracks.ts  types.ts  window.ts
src/modes/: Creator.tsx  Library.tsx  Player.tsx  Settings.tsx
src/state/: appStore.ts  categories.ts  hotkeys.ts  types.ts
src/styles/: index.css
src/utils/: actlog.ts  addSubtitleFlow.ts  authorship.ts  autoSnipFlow.ts  beepPlayer.ts  constants.ts  exportProfile.ts  format.ts  navGuard.ts  openExternalUrl.ts  openFileFlow.ts  recentFiles.ts  safetyBanner.ts  sanitize.ts  savePlaylist.ts  snapshotKey.ts  snipSummary.ts  uiErrorReporter.ts  unsavedWork.ts
