[package]
name = "fvp"
version = "0.1.0"
description = "Freedom Video Player"
authors = ["FVP"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "fvp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmpv2 = "4"
libmpv2-sys = "4"
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
parking_lot = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Synchronous HTTP client for TMDb lookups. Sync + rustls keeps the
# tree small and dodges the cmake/OpenSSL dance reqwest would pull in.
ureq = { version = "2", features = ["json", "tls"], default-features = false }
# Local-date conversion for rolling backup rotation. "clock" pulls in the
# OS timezone hook; we skip serde / wasm features for a small footprint.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Library Mode SQLite store. `bundled` ships the SQLite amalgamation with
# the binary so we don't need a system libsqlite3 — keeps the installer
# self-contained on Windows.
rusqlite = { version = "0.31", features = ["bundled"] }
# Cheap fingerprint hashing for the library identity scheme. md-5 is small,
# adequate for "is this the same file?" use (we never use it for security).
md-5 = "0.10"
# SHA-256 for the 4-digit Family-View PIN ("speed bump for kids" per
# directive — not a hardened secret). Stored hashed in library_settings.
sha2 = "0.10"
# Cross-platform recycle-bin: the Library's "Delete permanently" path
# moves files to the OS trash rather than nuking them — directive
# requires this be explicit, confirmed, and undoable.
trash = "5"
# Strong fingerprint hashing (computed on demand only). BLAKE3 is much
# faster than SHA-256 and we don't need crypto strength here, just a
# stable content ID.
blake3 = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    # AttachConsole + SetStdHandle so the GUI exe can opt into showing
    # stdout/stderr when launched from a terminal (PowerShell / cmd).
    "Win32_System_Console",
] }

# Crates committed in tech_stack.md but deferred until first needed:
#   tokio (async runtime)
#   tracing, tracing-subscriber (logging)
#   thiserror, anyhow (errors)
#   directories-next (config paths)
#   toml (settings persistence)
#   notify (folder watch — chapter 3)
#   blake3 (hashing)
#   ed25519-dalek (.free signing)
#   img_hash (perceptual frame hash)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
